== 0.5.7 / 2011-01-01

* Bug fixes

  * If no URI is present, include all cookies (Pratik Naik)

== 0.5.6 / 2010-09-25

* Bug fixes

  * Use parse_nested_query for parsing URI like Rack does (Eugene Bolshakov)
  * Don't depend on ActiveSupport extension to String (Bryan Helmkamp)
  * Do not overwrite HTTP_HOST if it is set (Krekoten' Marjan)

== 0.5.5 / 2010-09-22

* Bug fixes

  * Fix encoding of file uploads on Ruby 1.9 (Alan Kennedy)
  * Set env["HTTP_HOST"] when making requests (Istvan Hoka)

== 0.5.4 / 2010-05-26

* Bug fixes

  * Don't stomp on Content-Type's supplied via #header (Bryan Helmkamp)
  * Fixed build_multipart to allow for arrays of files (Louis Rose)
  * Don't raise an error if raw cookies contain a blank line (John Reilly)
  * Handle parameter names with brackets properly (Tanner Donovan)

== 0.5.3 / 2009-11-27

* Bug fixes

  * Fix cookie matching for subdomains (Marcin Kulik)

== 0.5.2 / 2009-11-13

* Bug fixes

  * Call close on response body after iteration, not before (Simon Rozet)
  * Add missing require for time in cookie_jar.rb (Jerry West)

== 0.5.1 / 2009-10-27

* Bug fixes

  * Escape cookie values (John Pignata)
  * Close the response body after each request, as per the Rack spec (Elomar França)

== 0.5.0 / 2009-09-19

* Bug fixes

  * Set HTTP_X_REQUESTED_WITH in the Rack env when a request is made with :xhr => true (Ben Sales)
  * Set headers in the Rack env in HTTP_USER_AGENT form
  * Rack::Test now generates no Ruby warnings

== 0.4.2 / 2009-09-01

* Minor enhancements

  * Merge in rack/master's build_multipart method which covers additional cases
  * Accept raw :params string input and merge it with the query string
  * Stringify and upcase request method (e.g. :post => "POST") (Josh Peek)

* Bug fixes

  * Properly convert hashes with nil values (e.g. :foo => nil becomes simply "foo", not "foo=")
  * Prepend a slash to the URI path if it doesn't start with one (Josh Peek)